complete date order function

--- a/CaseProject/View/TableViewCell.xib
+++ b/CaseProject/View/TableViewCell.xib
@@ -24,9 +24,9 @@
                                 <rect key="frame" x="0.0" y="0.0" width="492" height="86"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Atl-6t-Cnv">
-                                        <rect key="frame" x="8" y="0.0" width="158" height="86"/>
+                                        <rect key="frame" x="8" y="0.0" width="283" height="86"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="158" id="ewK-8R-52o"/>
+                                            <constraint firstAttribute="width" constant="283" id="ewK-8R-52o"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <nil key="textColor"/>
@@ -41,8 +41,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kategori:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jE4-So-AAg">
-                                        <rect key="frame" x="365" y="11" width="40" height="33"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Eklenme tarihi:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jE4-So-AAg">
+                                        <rect key="frame" x="339.5" y="11" width="65.5" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
